--- a/index.css
+++ b/index.css
@@ -120,6 +120,34 @@ img {
 /* ----- Headlines and Paragraphs ----- */
 /* --------------------------------------- */
 
+.animate-charcter
+{
+  
+  background-image: linear-gradient(
+    -265deg,
+      #231557 0%,
+    #56B4D3 10%,
+    #348F50 67%,
+    #67B26F 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 20s linear infinite;
+  display: inline-block;
+      font-size: 90px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
 h1,
 h2,
 h3 {
